--- a/Web-projects/To-Do Application/index.html
+++ b/Web-projects/To-Do Application/index.html
@@ -10,6 +10,7 @@
 <body onload="loaded()">
 		<h1> To-Do </h1>
 	<div class="take">
+		<marquee>To Do APplication</marquee>
 		<label for="task">Task</label><br>
 		<input type="text" id = "task" placeholder="Your input"><br>
 		<label for="des">Description</label><br>
